--- a/client/src/main/webapp/index.html
+++ b/client/src/main/webapp/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head>
+    <base href="/">
+    <title>Angular With Webpack</title>
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-hello world!
+<my-app>Loading...</my-app>
 </body>
 </html>
